 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_terminal__c/Dispenser_terminal__c.object-meta.xml
<CustomObject>
    <label>Dispenser terminal</label>
    <nameField>
        <displayFormat>ATM-{0000}</displayFormat>
        <label>Dispenser terminal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispenser terminals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>