 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_terminal__c/fields/ATM_USD_cash__c.field-meta.xml
<CustomField>
    <fullName>ATM_USD_cash__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ATM USD cash</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>