 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_terminal__c/fields/Dispenser_bank__c.field-meta.xml
<CustomField>
    <fullName>Dispenser_bank__c</fullName>
    <label>Dispenser bank</label>
    <referenceTo>Dispenser_bank__c</referenceTo>
    <relationshipLabel>Dispenser terminals</relationshipLabel>
    <relationshipName>Dispenser_terminals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>